<resources>
    <string name="app_name">EEE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addfloatbutton">addFloatButton</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="stat">Stat</string>
    <string name="more">More</string>
    <string name="no_records_found">No Records Found</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="title">Title</string>
    <string name="notification_icon_content_description_home_page">Home Page Notification Icon</string>
    <string name="all_accounts">All Accounts</string>
    <string name="total_balance">Available Balance</string>
    <string name="demo_value_total">৳.00.00</string>
    <string name="home_income_card_logo">home income card logo</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="spending">Spending\'s by category</string>
    <string name="this_month">This Month</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="see_more">See More</string>
    <string name="demo_amount">1000.00 BDT</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_details_2">Transaction Details:</string>
    <string name="all_transaction">All Transaction</string>
    <string name="all">All</string>
    <string name="amount">Amount</string>
    <string name="choose_your_category">Choose Your Category</string>
    <string name="record_transaction">Add New Transaction</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dummy_zero_value">৳ 0.0</string>
    <string name="out_of">out of</string>
    <string name="remaining_balance">Remaining budget:</string>
    <string name="spend">Spend from budget:</string>
    <string name="dummy_date">00/00/0000</string>
    <string name="end">To:</string>
    <string name="from">From:</string>
    <string name="budget_colon">Budget:</string>
    <string name="budget_category">Budget Category</string>
    <string name="category_colon">Category:</string>
    <string name="dummy_budget_title">This is a dummy title for a dummy budget. Latter this text will be replace you create a new budget from create budget fragment.</string>
    <string name="budget_details">Budget Details</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="demo_month_year">October, 23</string>
    <string name="calendar_go_to_previous_button">Calendar go to previous button</string>
    <string name="calendar_go_to_forward_button">Calendar go to forward button</string>
    <string name="no_transaction_found_message">Oh no!, no transactions found from this date.\n Add new transaction to view transactions here.</string>
    <string name="transaction_s_from_date"><![CDATA[Transaction\'s from Date ->]]></string>
    <string name="greeting_image">Greeting Image</string>
    <string name="create">Create</string>
    <string name="edit_cover_photo">Edit Cover Photo</string>
    <string name="available">Available</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="now">now</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="or">Or</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="gender">Gender</string>
    <string name="welcome">Welcome</string>
    <string name="signup_msg"><b>Sign up</b> or <b>log in</b> now to unlock a world of financial possibilities. Your journey to financial freedom starts here!</string>
    <string name="welcome_description">Ready to take control of your finances and embark on a journey towards financial success? Look no further!</string>
    <string name="welcome_msg">Welcome to Your Financial Companion!</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>

    <string-array name="date_filter">
        <item>This Month</item>
        <item>This Week</item>
        <item>Today</item>
    </string-array>

    <string-array name="transaction_type">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="budget_category">
        <item>Food</item>
        <item>Transportation</item>
        <item>Housing/Rental</item>
        <item>Entertainment</item>
        <item>Healthcare/Family</item>
        <item>Shopping</item>
        <item>Education</item>
        <item>Debt/Tax</item>
        <item>Savings</item>
        <item>Gifts/Donations</item>
        <item>Travel</item>
        <item>Others</item>
    </string-array>

    <string-array name="payment_type">
        <item>Cash</item>
        <item>Bank</item>
        <item>Mobile Banking</item>
        <item>Online Banking</item>
        <item>Payment</item>
    </string-array>
</resources>