<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/budget_icon_selector"
        android:title="@string/budget"/>

    <item
        android:id="@+id/stateViewFragment"
        android:icon="@drawable/stats_icon_selector"
        android:title="@string/stat"/>

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/more_icon_selector"
        android:title="@string/more"/>

</menu>