<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img"
        tools:context=".login.ui.WelcomeFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginImg"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_img" />

        <View
            android:id="@+id/welcomeView"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/gradient_devider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginImg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/welcome"
            android:textColor="@color/orange3"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeView"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/welcome_msg"
            android:textColor="@color/final_primary_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeMsgDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_description"
            android:textColor="@color/final_primary_black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMsgTv"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpMsgTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/signup_msg"
            android:textColor="@color/final_primary_black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMsgDescription"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/add_budget_float_btn"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpMsgTv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_budget_float_btn"
            app:backgroundTint="@color/mediumOrange"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>